Fix some styling issues

--- a/index.html
+++ b/index.html
@@ -17,50 +17,55 @@
 </head>
 
 <body>
-    <header class="header">
-        <h2>Awesome Calculator</h2>
-    </header>
-    <main class="main">
-        <div class="calculator border-dark">
-            <section class="screen border-dark border-radius">
-                <div class="screen-text" id="screen-text">
-                    <p>Screen-Text</p>
-                </div>
-                <div class="screen-results" id="screen-results">
-                    <p>Screen-Results</p>
-                </div>
-            </section>
-            <section class="clear-and-delete">
-                <div class="clear border-dark border-radius" id="clear">
-                    <p>Clear</p>
-                </div>
-                <div class="delete border-dark border-radius" id="delete">
-                    <p>Delete</p>
-                </div>
-            </section>
-            <section class="keys">
-                <div class="seven key" id="seven">7</div>
-                <div class="eight key" id="eight">8</div>
-                <div class="nine key" id="nine">9</div>
-                <div class="division key" id="division">/</div>
-                <div class="four key" id="four">4</div>
-                <div class="five key" id="five">5</div>
-                <div class="six key" id="six">6</div>
-                <div class="times key" id="times">*</div>
-                <div class="one key" id="one">1</div>
-                <div class="two key" id="two">2</div>
-                <div class="three key" id="three">3</div>
-                <div class="minus key" id="minus">-</div>
-                <div class="point key" id="point">.</div>
-                <div class="zero key" id="zero">0</div>
-                <div class="equal-to key" id="equal-to">=</div>
-                <div class="plus key" id="plus">+</div>
-            </section>
-        </div>
-    </main>
-    <footer class="footer">
-        <p>Awesome Calculator</p>
-    </footer>
+    <div class="container">
+        <header class="header">
+            <h2>Awesome Calculator</h2>
+        </header>
+        <main class="main">
+            <div class="calculator border-dark">
+                <section class="screen border-dark border-radius">
+                    <div class="screen-text" id="screen-text">
+                        <p>Screen-Text</p>
+                    </div>
+                    <div class="screen-results" id="screen-results">
+                        <p>Screen-Results</p>
+                    </div>
+                </section>
+                <section class="clear-and-delete">
+                    <div class="clear border-dark border-radius" id="clear">
+                        <p>Clear</p>
+                    </div>
+                    <div class="delete border-dark border-radius" id="delete">
+                        <p>Delete</p>
+                    </div>
+                </section>
+                <section class="key-pad" id="keys">
+                    <div class="seven key" id="seven">7</div>
+                    <div class="eight key" id="eight">8</div>
+                    <div class="nine key" id="nine">9</div>
+                    <div class="division key" id="division">/</div>
+                    <div class="four key" id="four">4</div>
+                    <div class="five key" id="five">5</div>
+                    <div class="six key" id="six">6</div>
+                    <div class="times key" id="times">*</div>
+                    <div class="one key" id="one">1</div>
+                    <div class="two key" id="two">2</div>
+                    <div class="three key" id="three">3</div>
+                    <div class="minus key" id="minus">-</div>
+                    <div class="point key" id="point">.</div>
+                    <div class="zero key" id="zero">0</div>
+                    <div class="equal-to key" id="equal-to">=</div>
+                    <div class="plus key" id="plus">+</div>
+                </section>
+            </div>
+        </main>
+        <footer class="footer">
+            <p>Awesome Calculator</p>
+        </footer>
+    </div>
+
+    <!-- JS -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
