Change multiplication and division signs

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 <div class="seven key" id="seven">7</div>
                 <div class="eight key" id="eight">8</div>
                 <div class="nine key" id="nine">9</div>
-                <div class="division key" id="division">/</div>
+                <div class="division key" id="division">÷</div>
                 <div class="four key" id="four">4</div>
                 <div class="five key" id="five">5</div>
                 <div class="six key" id="six">6</div>
-                <div class="times key" id="times">*</div>
+                <div class="times key" id="times">x</div>
                 <div class="one key" id="one">1</div>
                 <div class="two key" id="two">2</div>
                 <div class="three key" id="three">3</div>
