--- a/index.html
+++ b/index.html
@@ -23,42 +23,46 @@
     </header>
     <main class="main">
         <div class="calculator border-dark">
-            <section class="screen border-dark border-radius">
+            <!-- Screen  -->
+            <section class="screen border-dark border-radius" id="screen">
                 <div class="screen-text" id="screen-text">
-                    <p>Screen-Text</p>
+                    <p> </p>
                 </div>
                 <div class="screen-results" id="screen-results">
-                    <p>Screen-Results</p>
+                    <p> </p>
                 </div>
             </section>
+            <!-- Clear - Delete -->
             <section class="clear-and-delete">
-                <div class="clear border-dark border-radius" id="clear">
+                <div class="clear border-dark border-radius" id="clear-all">
                     <p>Clear</p>
                 </div>
-                <div class="delete border-dark border-radius" id="delete">
+                <div class="delete border-dark border-radius" id="delete-one">
                     <p>Delete</p>
                 </div>
             </section>
+            <!-- Keypad -->
             <section class="key-pad" id="keys">
-                <div class="seven key" id="seven">7</div>
-                <div class="eight key" id="eight">8</div>
-                <div class="nine key" id="nine">9</div>
-                <div class="division key" id="division">÷</div>
-                <div class="four key" id="four">4</div>
-                <div class="five key" id="five">5</div>
-                <div class="six key" id="six">6</div>
-                <div class="times key" id="times">x</div>
-                <div class="one key" id="one">1</div>
-                <div class="two key" id="two">2</div>
-                <div class="three key" id="three">3</div>
-                <div class="minus key" id="minus">-</div>
-                <div class="point key" id="point">.</div>
-                <div class="zero key" id="zero">0</div>
-                <div class="equal-to key" id="equal-to">=</div>
-                <div class="plus key" id="plus">+</div>
+                <div class="key-number" id="seven">7</div>
+                <div class="key-number" id="eight">8</div>
+                <div class="key-number" id="nine">9</div>
+                <div class="key-operator" id="division">÷</div>
+                <div class="key-number" id="four">4</div>
+                <div class="key-number" id="five">5</div>
+                <div class="key-number" id="six">6</div>
+                <div class="key-operator" id="times">×</div>
+                <div class="key-number" id="one">1</div>
+                <div class="key-number" id="two">2</div>
+                <div class="key-number" id="three">3</div>
+                <div class="key-operator" id="minus">-</div>
+                <div class="key-point" id="point">.</div>
+                <div class="key-number" id="zero">0</div>
+                <div class="key-operator" id="equal-to">=</div>
+                <div class="key-operator" id="plus">+</div>
             </section>
 
     </main>
+    <!-- Footer -->
     <footer class="footer">
         <p>Awesome Calculator</p>
     </footer>
